ingress/sanjeebmetallb/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazordeploymentingress
  labels:
    app: blazor-app
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: blazor-app
  template:
    metadata:
      labels:
        app: blazor-app
    spec:
      containers:
      - name: blazorpod
        image: sanjeebojha/sanjeeb:8.0.6-amd64
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "700m"
        ports:
          - containerPort: 8080
      - name: nepalicommunity
        image: sanjeebojha/nepalicommunity:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "700m"
        ports:
          - containerPort: 8081
      dnsConfig:
        options:
          - name: ndots
            value: "2"


---
apiVersion: v1
kind: Service
metadata:
  name: blazor-app
  labels:
    app: blazor-app
spec:
  selector:
    app: blazor-app
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 8080
  type: LoadBalancer
