ingress/sanjeebmetallb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazor-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: home.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blazor-app
            port: 
              number: 80
